@@ -3,11 +3,10 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
-  <title><%= class_name %>: <%%= controller.action_name %%></title>
-  <%%= stylesheet_link_tag 'scaffold' %%>
-  <%%= javascript_include_tag :default %%>
+  <title><%= class_name %>: <%%= controller.action_name %></title>
+  <%%= javascript_include_tag :defaults %>
 </head>
 <body>
-  <%%= yield  %%>
+  <%%= yield %>
 </body>
 </html>
