@@ -1,5 +1,5 @@
 <li>
-  <span><%%= @chat.name %%></span>
-  <span><%%= @chat.message %%></span>
+  <span><%%=h @chat.name %></span>
+  <span><%%=h @chat.message %></span>
 </li>
 
